--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -18,6 +19,7 @@
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^27.4.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.4",
     "vitest": "^4.0.16"
   }
